# ankiclientsync

./: .gitignore  README.md  __init__.py  client.py  collection.py  main.py  pyproject.toml
tests/: __init__.py  collection.anki2  conftest.py  test_download.py  test_import.py  test_media_sync.py  test_partial_sync.py  test_sync_client.py  test_upload.py
